# Physical-AI-Humanoid-Robotics-Textbook

./: .gitignore  CLAUDE.md  package-lock.json
.claude/: settings.local.json
.claude/agents/agents/: chatkit-frontend-implementer.md  docusaurus-ingestion-planner.md  qdrant-retrieval-planner.md  rag-retrieval-pipeline.md  spec-1-reviewer.md  (+16 more)
.specify/memory/: openai-knowledge.md  specify_prompt.md
auth-service/: index.js  package-lock.json  package.json
backend/: .env.example  .gitignore  agent.py  app.py  auth.py  db.py  main.py  nixpacks.toml  pyproject.toml  requirements.txt  retrieve.py  setup_indexes.py
backend/models/: __init__.py  auth.py  health.py  query.py  request.py  response.py  session.py
backend/tests/: __init__.py  conftest.py  test_agent_evaluation.py  test_api.py  test_auth.py  test_database.py  test_retrieval.py
physical-ai-robotics-book/: .env.example  auth-server.js  auth-server.ts  docusaurus.config.ts  package-lock.json  package.json  vercel.json
specs/002-futuristic-homepage/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-embedding-pipeline/: plan.md  spec.md  tasks.md
specs/004-embedding-retrieval/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md  verification-report.md
specs/005-rag-agent-api/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-chatkit-frontend/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/007-authentication-integration/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
(+90 files in other folders)
